--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   <title>Todo List</title>
 </head>
 <body>
-  
+  <main>
+    <div class="container">
+      <div class="todo">
+        <div class="todo__header">
+          <h1 class="todo__title">to dos</h1>
+          <label for="todo input">
+            <input class="todo__input" type="text" placeholder="What needs to be done?"></input>
+          </label>
+        </div>
+        <div class="todo__body">
+          <ul class="todo__list">
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
 
   <script src="app.js"></script>
 </body>
